@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="cz.romario.opensudoku"
-      android:versionName="1.1.1" 
-      android:versionCode="1101"
-      android:installLocation="auto"
+      android:versionName="1.1.2" 
+      android:versionCode="1102"
+      android:installLocation="preferExternal"
       >
     <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4" />
     <application android:icon="@drawable/opensudoku" android:label="@string/app_name">
@@ -65,6 +65,10 @@
         <activity android:name=".gui.GameSettingsActivity"
                   android:label="@string/game_settings">
         </activity>
+        <activity android:name=".gui.FileListActivity"
+                  android:label="@string/app_name">
+        </activity>
+        
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
